Update index.html added new style for blog

--- a/index.html
+++ b/index.html
@@ -234,66 +234,47 @@
   </section>
 
 
-
 <!-- 📝 BLOG SECTION -->
 <section id="latest-articles" class="articles-section">
   <div class="container">
 
-    <header class="section-header">
+    <header class="section-header" style="margin-bottom: 2rem; text-align: center;">
       <h2 class="section-title">Latest Articles</h2>
-      <p class="section-subtitle">Insights to help you grow your online business</p>
+      <p class="section-subtitle">Insights, tools, and strategies to help you grow your online business in 2025.</p>
     </header>
 
-    <div class="articles-grid">
+    <div class="blog-preview-grid">
 
       <!-- Article 1 -->
-      <article class="article-card yellow">
-        <a href="blog/start-online-business.html">
-          <div class="icon">🚀</div>
+      <a href="blog/start-online-business-2025.html" class="blog-preview-card">
+        <img src="assets/blog/start-online-business.jpg" alt="How to Start an Online Business in 2025" />
+        <div class="blog-card-body">
           <h3>How to Start a Successful Online Business in 2025</h3>
-          <p>Essential steps for launching a profitable online business — even as a complete beginner.</p>
-        </a>
-      </article>
+          <p>Essential steps to launch a profitable online business — even as a complete beginner.</p>
+        </div>
+      </a>
 
       <!-- Article 2 -->
-      <article class="article-card purple">
-        <a href="blog/ai-automation-solopreneurs-2025.html">
-          <div class="icon">⚙️</div>
+      <a href="blog/ai-automation-for-solopreneurs-2025.html" class="blog-preview-card">
+        <img src="assets/blog/ai-solopreneurs.jpg" alt="AI Automation for Solopreneurs" />
+        <div class="blog-card-body">
           <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
           <p>How AI is transforming online work, automating tasks, and helping creators scale faster.</p>
-        </a>
-      </article>
+        </div>
+      </a>
 
       <!-- Article 3 -->
-      <article class="article-card blue">
-        <a href="blog/ai-tools-small-business-2025.html">
-          <div class="icon">🤖</div>
+      <a href="blog/top-ai-tools-small-business-2025.html" class="blog-preview-card">
+        <img src="assets/blog/ai-tools.jpg" alt="Top AI Tools for Small Businesses" />
+        <div class="blog-card-body">
           <h3>Top AI Tools Small Business Owners Should Use in 2025</h3>
-          <p>The essential AI tools every business owner should use to save time and grow.</p>
-        </a>
-      </article>
-
-      <!-- Article 4 -->
-      <article class="article-card green">
-        <a href="blog/digital-marketing-strategies-2025.html">
-          <div class="icon">📈</div>
-          <h3>The Best Digital Marketing Strategies for Beginners in 2025</h3>
-          <p>Beginner-friendly marketing strategies to build your presence and audience.</p>
-        </a>
-      </article>
-
-      <!-- Article 5 -->
-      <article class="article-card pink">
-        <a href="blog/marketing-skills-2025.html">
-          <div class="icon">✨</div>
-          <h3>Essential Digital Marketing Skills You Need in 2025</h3>
-          <p>The top skills every creator, marketer, and business owner needs this year.</p>
-        </a>
-      </article>
+          <p>The must-have AI tools every business owner needs to save time and grow faster.</p>
+        </div>
+      </a>
 
     </div>
 
-    <div class="cta-buttons">
+    <div class="cta-buttons" style="margin-top: 2.5rem;">
       <a href="blog/index-blog.html" class="btn primary">View All Articles</a>
     </div>
 
