Update index.html updated style

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
 
 
 <!-- 📝 BLOG SECTION -->
-<section id="latest-articles" class="articles-section">
+<section id="latest-articles" class="home-blog-section">
   <div class="container">
 
-    <header class="section-header" style="margin-bottom: 2rem; text-align: center;">
+    <header class="section-header">
       <h2 class="section-title">Latest Articles</h2>
       <p class="section-subtitle">Insights, tools, and strategies to help you grow your online business in 2025.</p>
     </header>
@@ -246,8 +246,8 @@
     <div class="blog-preview-grid">
 
       <!-- Article 1 -->
-      <a href="blog/start-online-business-2025.html" class="blog-preview-card">
-        <img src="assets/blog/start-online-business.jpg" alt="How to Start an Online Business in 2025" />
+      <a href="blog/start-online-business.html" class="blog-preview-card">
+        <img src="blog/image/start-online-business.jpg" alt="How to Start an Online Business in 2025">
         <div class="blog-card-body">
           <h3>How to Start a Successful Online Business in 2025</h3>
           <p>Essential steps to launch a profitable online business — even as a complete beginner.</p>
@@ -255,8 +255,8 @@
       </a>
 
       <!-- Article 2 -->
-      <a href="blog/ai-automation-for-solopreneurs-2025.html" class="blog-preview-card">
-        <img src="assets/blog/ai-solopreneurs.jpg" alt="AI Automation for Solopreneurs" />
+      <a href="blog/ai-automation-solopreneurs-2025.html" class="blog-preview-card">
+        <img src="blog/image/ai-solopreneurs.jpg" alt="AI Automation for Solopreneurs">
         <div class="blog-card-body">
           <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
           <p>How AI is transforming online work, automating tasks, and helping creators scale faster.</p>
@@ -264,8 +264,8 @@
       </a>
 
       <!-- Article 3 -->
-      <a href="blog/top-ai-tools-small-business-2025.html" class="blog-preview-card">
-        <img src="assets/blog/ai-tools.jpg" alt="Top AI Tools for Small Businesses" />
+      <a href="blog/ai-tools-small-business-2025.html" class="blog-preview-card">
+        <img src="blog/image/ai-business-tools.jpg" alt="Top AI Tools for Small Businesses">
         <div class="blog-card-body">
           <h3>Top AI Tools Small Business Owners Should Use in 2025</h3>
           <p>The must-have AI tools every business owner needs to save time and grow faster.</p>
@@ -274,12 +274,13 @@
 
     </div>
 
-    <div class="cta-buttons" style="margin-top: 2.5rem;">
+    <div class="cta-buttons">
       <a href="blog/index-blog.html" class="btn primary">View All Articles</a>
     </div>
 
   </div>
 </section>
+
 
   <!-- 🧰 TOOLS -->
   <section id="tools" class="section tools light">
