--- a/index.html
+++ b/index.html
@@ -234,39 +234,39 @@
   </section>
 
 
-<!-- 📝 BLOG SECTION -->
-<section id="latest-articles" class="home-blog-section">
-  <div class="container">
+<!-- 📝 Latest Articles Section -->
+<section class="home-blog-preview">
+  <div class="blog-container">
 
-    <header class="section-header">
-      <h2 class="section-title">Latest Articles</h2>
-      <p class="section-subtitle">Insights, tools, and strategies to help you grow your online business in 2025.</p>
-    </header>
+    <h2 class="blog-title">Latest Articles</h2>
+    <p class="blog-subtitle">
+      Insights, tools, and strategies to help you grow your online business in 2025.
+    </p>
 
     <div class="blog-preview-grid">
 
-      <!-- Article 1 -->
+      <!-- 🚀 Article 1 -->
       <a href="blog/start-online-business.html" class="blog-preview-card">
-        <img src="blog/image/start-online-business.jpg" alt="How to Start an Online Business in 2025">
-        <div class="blog-card-body">
+        <img src="assets/blog/start-online-business.jpg" alt="How to Start Online Business 2025">
+        <div class="card-body">
           <h3>How to Start a Successful Online Business in 2025</h3>
           <p>Essential steps to launch a profitable online business — even as a complete beginner.</p>
         </div>
       </a>
 
-      <!-- Article 2 -->
+      <!-- ⚙️ Article 2 -->
       <a href="blog/ai-automation-solopreneurs-2025.html" class="blog-preview-card">
-        <img src="blog/image/ai-solopreneurs.jpg" alt="AI Automation for Solopreneurs">
-        <div class="blog-card-body">
+        <img src="assets/blog/ai-automation.jpg" alt="AI Automation for Solopreneurs 2025">
+        <div class="card-body">
           <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
           <p>How AI is transforming online work, automating tasks, and helping creators scale faster.</p>
         </div>
       </a>
 
-      <!-- Article 3 -->
+      <!-- 🤖 Article 3 -->
       <a href="blog/ai-tools-small-business-2025.html" class="blog-preview-card">
-        <img src="blog/image/ai-business-tools.jpg" alt="Top AI Tools for Small Businesses">
-        <div class="blog-card-body">
+        <img src="assets/blog/ai-tools-small-business.jpg" alt="AI Tools for Small Businesses">
+        <div class="card-body">
           <h3>Top AI Tools Small Business Owners Should Use in 2025</h3>
           <p>The must-have AI tools every business owner needs to save time and grow faster.</p>
         </div>
