Update index.html update button

--- a/pages/index.html
+++ b/pages/index.html
@@ -275,9 +275,9 @@
     </div>
 
     <div class="cta-buttons" style="margin-top:2rem;">
-        <a href="blog/index-blog.html" class="btn primary">View All Articles</a>
+        <a href="../blog/index-blog.html" class="btn primary">View All Articles</a>
     </div>
-
+ 
   </div>
 </section>
 
