updated index wth new cards

--- a/pages/index.html
+++ b/pages/index.html
@@ -68,46 +68,48 @@
 
 
 
-<!-- 📝 Latest Articles Section -->
-<section class="home-blog-preview">
-  <div class="blog-container">
+<!-- 📝 Latest Articles -->
+<section class="latest-articles section">
+  <h2 class="section-title">Articles</h2>
+  <p class="section-sub">
+    Insights, tools, and strategies to help you grow your online business in 2025.
+  </p>
 
-    <h2 class="blog-title">Latest Articles</h2>
-    <p class="blog-subtitle">
-      Insights, tools, and strategies to help you grow your online business in 2025.
-    </p>
+  <div class="latest-grid">
 
-    <div class="blog-preview-grid">
+    <!-- ARTICLE 1 -->
+    <a href="/blog/start-online-business.html" class="latest-card">
+      <img src="/blog/image/start-online-business.jpg" alt="Start Online Business 2025">
+      <div class="text">
+        <h3>How to Start a Successful Online Business in 2025</h3>
+        <p>Essential steps for launching a profitable online business — even as a complete beginner.</p>
+      </div>
+    </a>
 
-      <!-- 🚀 Article 1 -->
-      <a href="/blog/start-online-business.html" class="blog-preview-card">
-        <img src="/blog/image/start-online-business.jpg" alt="How to Start Online Business 2025">
-        <div class="card-body">
-          <h3>How to Start a Successful Online Business in 2025</h3>
-          <p>Essential steps to launch a profitable online business — even as a complete beginner.</p>
-        </div>
-      </a>
+    <!-- ARTICLE 2 -->
+    <a href="/blog/ai-automation-solopreneurs-2025.html" class="latest-card">
+      <img src="/blog/image/ai-automation.jpg" alt="AI Automation Solopreneurs">
+      <div class="text">
+        <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
+        <p>How AI is transforming online work, automating tasks, and helping creators scale faster.</p>
+      </div>
+    </a>
 
-      <!-- ⚙️ Article 2 -->
-      <a href="/blog/ai-automation-solopreneurs-2025.html" class="blog-preview-card">
-        <img src="/blog/image/ai-automation.jpg" alt="AI Automation for Solopreneurs 2025">
-        <div class="card-body">
-          <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
-          <p>How AI is transforming online work, automating tasks, and helping creators scale faster.</p>
-        </div>
-      </a>
+    <!-- ARTICLE 3 -->
+    <a href="/blog/ai-business-tools.html" class="latest-card">
+      <img src="/blog/image/ai-business-tools.jpg" alt="AI Tools for Business">
+      <div class="text">
+        <h3>Top AI Tools Small Business Owners Should Use in 2025</h3>
+        <p>Must-have AI tools every business owner needs to save time and grow faster.</p>
+      </div>
+    </a>
 
-      <!-- 🤖 Article 3 -->
-      <a href="/blog/ai-business-tools.html" class="blog-preview-card">
-        <img src="/blog/image/ai-business-tools.jpg" alt="AI Tools for Small Businesses">
-        <div class="card-body">
-          <h3>Top AI Tools Small Business Owners Should Use in 2025</h3>
-          <p>The must-have AI tools every business owner needs to save time and grow faster.</p>
-        </div>
-      </a>
-
-    </div>
   </div>
+
+  <div class="cta-buttons" style="margin-top: 2rem;">
+    <a href="/blog/index-blog.html" class="btn primary">View All Articles</a>
+  </div>
+
 
   <div class="cta-buttons" style="margin-top:2rem;">
       <a href="/blog/index-blog.html" class="btn primary">View All Articles</a>
