fixed index and index-blog

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <style>
     body {
       margin: 0;
-      padding-top: 80px;
       font-family: "Poppins", sans-serif;
       background: #f9fafb;
       color: #0f172a;
@@ -114,7 +113,7 @@
 
   <div class="latest-grid">
 
-    <a href="/tools/password-generator.html" class="latest-card tool-card">
+    <a href="pages/tools/password-generator.html" class="latest-card tool-card">
       <div class="tool-icon"><i data-lucide="shield"></i></div>
       <div class="text">
         <h3>Password Generator</h3>
@@ -122,7 +121,7 @@
       </div>
     </a>
 
-    <a href="/tools/file-converter.html" class="latest-card tool-card">
+    <a href="pages/tools/file-converter.html" class="latest-card tool-card">
       <div class="tool-icon"><i data-lucide="file"></i></div>
       <div class="text">
         <h3>File Converter</h3>
@@ -130,7 +129,7 @@
       </div>
     </a>
 
-    <a href="/tools/csv-cleaner.html" class="latest-card tool-card">
+    <a href="pages/tools/csv-cleaner.html" class="latest-card tool-card">
       <div class="tool-icon"><i data-lucide="table"></i></div>
       <div class="text">
         <h3>CSV Cleaner</h3>
@@ -138,11 +137,25 @@
       </div>
     </a>
 
-    <a href="/tools/qr-generator.html" class="latest-card tool-card">
+    <a href="pages/tools/qr-generator.html" class="latest-card tool-card">
       <div class="tool-icon"><i data-lucide="qr-code"></i></div>
       <div class="text">
         <h3>QR Generator</h3>
         <p>Create custom QR codes in seconds.</p>
+      </div>
+    </a>
+
+    <a href="tools/zip-unzip.html" class="card gradient-gray">
+      <div class="card-icon"><i data-lucide="archive"></i></div>
+        <h3>Zip / UnZip</h3>
+        <p>Compress and extract files instantly with fast, secure performance.</p>
+      </div>
+    </a>
+
+    <a href="tools/url-shortener.html" class="card gradient-green">
+      <div class="card-icon"><i data-lucide="link-2"></i></div>
+        <h3>URL Shortener</h3>
+        <p>Track, shorten, and manage your links for marketing and performance analysis.</p>
       </div>
     </a>
 
