updated path in index 3

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       </div>
     </a>
 
-   <a href="digital-marketing-strategies-2025.html" class="blog-card">
-    <img src="image/best-digital-marketing-strategies.jpg" alt="Digital marketing strategies for beginners">
+   <a href="/pages/blog/digital-marketing-strategies-2025.html" class="blog-card">
+    <img src="/pages/blog/image/best-digital-marketing-strategies.jpg" alt="Digital marketing strategies for beginners">
     <div class="card-body">
       <h3>The Best Digital Marketing Strategies for Beginners in 2025</h3>
       <p>Beginner-friendly strategies for building online presence and visibility.</p>
@@ -145,15 +145,15 @@
       </div>
     </a>
 
-    <a href="tools/zip-unzip.html" class="card gradient-gray">
-      <div class="card-icon"><i data-lucide="archive"></i></div>
+    <a href="pages/tools/zip-unzip.html" class="card gradient-gray">
+      <div class="tool-icon"><i data-lucide="qr-code"></i></div>
         <h3>Zip / UnZip</h3>
         <p>Compress and extract files instantly with fast, secure performance.</p>
       </div>
     </a>
 
-    <a href="tools/url-shortener.html" class="card gradient-green">
-      <div class="card-icon"><i data-lucide="link-2"></i></div>
+    <a href="pages/tools/url-shortener.html" class="card gradient-green">
+      <div class="tool-icon"><i data-lucide="qr-code"></i></div>
         <h3>URL Shortener</h3>
         <p>Track, shorten, and manage your links for marketing and performance analysis.</p>
       </div>
