updated path in index 4

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </a>
 
-   <a href="/pages/blog/digital-marketing-strategies-2025.html" class="blog-card">
+   <a href="/pages/blog/digital-marketing-strategies-2025.html" class="latest-card">
     <img src="/pages/blog/image/best-digital-marketing-strategies.jpg" alt="Digital marketing strategies for beginners">
     <div class="card-body">
       <h3>The Best Digital Marketing Strategies for Beginners in 2025</h3>
