updated paths in tools

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
       </div>
     </a>
 
-    <a href="pages/tools/zip-unzip.html" class="card gradient-gray">
+    <a href="pages/tools/zip-unzip.html" class="latest-card tool-card">
       <div class="tool-icon"><i data-lucide="qr-code"></i></div>
         <h3>Zip / UnZip</h3>
         <p>Compress and extract files instantly with fast, secure performance.</p>
       </div>
     </a>
 
-    <a href="pages/tools/url-shortener.html" class="card gradient-green">
+    <a href="pages/tools/url-shortener.html" class="latest-card tool-card">
       <div class="tool-icon"><i data-lucide="qr-code"></i></div>
         <h3>URL Shortener</h3>
         <p>Track, shorten, and manage your links for marketing and performance analysis.</p>
@@ -192,8 +192,12 @@
         <p>Automate customer engagement and lead collection.</p>
       </div>
     </a>
+    </div>
 
-  </div>
+    <div class="cta-buttons" style="margin-top: 2rem; text-align:center;">
+     <a href="/pages/contact.html" class="btn primary">Contact me</a>
+    </div>
+
 </section>
 
 <!-- CONTACT -->
