updated pass tools2

--- a/pages/tools/password-generator.html
+++ b/pages/tools/password-generator.html
@@ -153,6 +153,42 @@
         <!-- TOOL FORM GOES HERE -->
         <form class="tool-form">
           <!-- Replace with real tool code -->
+           <!-- PASSWORD SCRIPT -->
+          <script>
+          document.addEventListener("DOMContentLoaded", () => {
+            const generateBtn = document.querySelector("#generateBtn");
+            const lengthInput = document.querySelector("#length");
+            const includeNumbers = document.querySelector("#includeNumbers");
+            const includeSymbols = document.querySelector("#includeSymbols");
+            const output = document.querySelector("#output");
+            const outputBox = document.querySelector("#outputBox");
+            const copyBtn = document.querySelector("#copyBtn");
+            const copyMsg = document.querySelector("#copyMsg");
+
+            generateBtn.addEventListener("click", () => {
+              const length = parseInt(lengthInput.value) || 12;
+              let charset = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
+              if (includeNumbers.checked) charset += "0123456789";
+              if (includeSymbols.checked) charset += "!@#$%^&*()_+-={}[]<>?";
+
+              let pwd = "";
+              for (let i = 0; i < length; i++) {
+                pwd += charset[Math.floor(Math.random() * charset.length)];
+              }
+
+              output.value = pwd;
+              outputBox.classList.remove("hidden");
+            });
+
+            copyBtn.addEventListener("click", () => {
+              navigator.clipboard.writeText(output.value).then(() => {
+                copyMsg.style.display = "block";
+                setTimeout(() => copyMsg.style.display = "none", 1500);
+              });
+            });
+          });
+          </script>
+      
         </form>
       </div>
 
