pass folder created 3

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <div class="tools-grid">
 
-    <a href="/pages/tools/password-generator/index.html" class="tool-card">
+    <a href="https://bitadigitalhub.com/pages/tools/password-generator/index.html" class="tool-card">
       <div class="tool-icon"><i data-lucide="shield"></i></div>
       <h3>Password Generator</h3>
       <p>Create secure, custom passwords instantly.</p>
