tools is in root now

--- a/index.html
+++ b/index.html
@@ -81,37 +81,37 @@
 
   <div class="tools-grid">
 
-    <a href="/tools/pass.html" class="tool-card">
+    <a href="/tools/password-generator.html" class="tool-card">
       <div class="tool-icon"><i data-lucide="shield"></i></div>
       <h3>Password Generator</h3>
       <p>Create secure, custom passwords instantly.</p>
     </a>
 
-    <a href="/pages/tools/file-converter.html" class="tool-card">
+    <a href="/tools/file-converter.html" class="tool-card">
       <div class="tool-icon"><i data-lucide="file"></i></div>
       <h3>File Converter</h3>
       <p>Convert PDFs, documents and data files easily.</p>
     </a>
 
-    <a href="/pages/tools/csv-cleaner.html" class="tool-card">
+    <a href="/tools/csv-cleaner.html" class="tool-card">
       <div class="tool-icon"><i data-lucide="table"></i></div>
       <h3>CSV Cleaner</h3>
       <p>Automatically clean and format CSV files.</p>
     </a>
 
-    <a href="/pages/tools/qr-generator.html" class="tool-card">
+    <a href="/tools/qr-generator.html" class="tool-card">
       <div class="tool-icon"><i data-lucide="scan"></i></div>
       <h3>QR Generator</h3>
       <p>Create custom QR codes in seconds.</p>
     </a>
 
-    <a href="/pages/tools/zip-unzip.html" class="tool-card">
+    <a href="/tools/zip-unzip.html" class="tool-card">
       <div class="tool-icon"><i data-lucide="folder-archive"></i></div>
       <h3>Zip / UnZip</h3>
       <p>Compress and extract files instantly.</p>
     </a>
 
-    <a href="/pages/tools/url-shortener.html" class="tool-card">
+    <a href="/tools/url-shortener.html" class="tool-card">
       <div class="tool-icon"><i data-lucide="link"></i></div>
       <h3>URL Shortener</h3>
       <p>Track, shorten, and manage your links.</p>
@@ -164,9 +164,9 @@
   <div class="articles-grid">
 
     <!-- CARD 1 -->
-    <a href="/pages/blog/start-online-business.html" class="article-card">
+    <a href="/blog/start-online-business.html" class="article-card">
       <div class="card-image">
-        <img src="/pages/blog/image/how-to-start-online-biz.jpg" alt="Online Business">
+        <img src="/blog/image/how-to-start-online-biz.jpg" alt="Online Business">
       </div>
       <div class="card-content">
         <h3>How to Start a Successful Online Business in 2025</h3>
@@ -175,9 +175,9 @@
     </a>
 
     <!-- CARD 2 -->
-    <a href="/pages/blog/ai-automation-solopreneurs-2025.html" class="article-card">
+    <a href="/blog/ai-automation-solopreneurs-2025.html" class="article-card">
       <div class="card-image">
-        <img src="/pages/blog/image/the-rise-of-AI.jpg" alt="AI Automation">
+        <img src="/blog/image/the-rise-of-AI.jpg" alt="AI Automation">
       </div>
       <div class="card-content">
         <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
@@ -186,9 +186,9 @@
     </a>
 
     <!-- CARD 3 -->
-    <a href="/pages/blog/digital-marketing-strategies-2025.html" class="article-card">
+    <a href="/blog/digital-marketing-strategies-2025.html" class="article-card">
       <div class="card-image">
-        <img src="/pages/blog/image/best-digital-marketing-strategies.jpg" alt="Digital Marketing">
+        <img src="/blog/image/best-digital-marketing-strategies.jpg" alt="Digital Marketing">
       </div>
       <div class="card-content">
         <h3>The Best Digital Marketing Strategies for Beginners in 2025</h3>
@@ -199,7 +199,7 @@
   </div>
 
   <div class="cta-buttons" style="margin-top: 2rem; text-align:center;">
-    <a href="/pages/blog/index-blog.html" class="btn primary">View All Articles</a>
+    <a href="/blog/index-blog.html" class="btn primary">View All Articles</a>
   </div>
 
 </section>
